# pretty-log

./: .gitignore  Cargo.toml  LICENSE  README.md  Taskfile.yaml  go.mod  go.sum  main.go
.github/workflows/: release.yml
cmd/: root.go
internal/: pretty_log.go
src/: main.rs
test/: logs.txt  logs_pino.txt  test.go
