[package]
name = "pretty-json-log"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
colored = "2"
clap = "3.0.0-beta.2"
chrono = "0.4"
regex = "1.5"
dateparser = "0.2.0"
signal-hook = "0.3.15"
