[package]
name = "pretty-log"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
colored = "2"
clap = { version = "4.5.4", features = ["derive"] }
chrono = "0.4"
regex = "1.5"
dateparser = "0.2.0"
signal-hook = { version = "0.3.15", features = ["extended-siginfo"] }
